# NucCa

./: README.md
src/analysis/: analysis.Rmd
src/pipeline/arr-paired-reads/: README.md  conda_env.yml  pair_all.py  pairs.py  run.sh
src/pipeline/assign-by-edge/: README.md  fletch.sh  list_all.py  t.py
src/pipeline/assign-by-midpoint/: README.md  assign_all.py  sort.sh  t.py
src/pipeline/edge-distances/: README.md  Rds.R  cluster_all_ds.py  fletch.sh  list_all_ds.py  sort.sh  t.py
src/pipeline/hg38tohg19/: .gitignore  README.md  conda_env.yml  setup.sh
src/pipeline/make-nuc-file/: README.md  filter.py  filter.sh  parse.py  run.sh  sort.sh
src/pipeline/track/: README.md  parse.py  parse_nuc.py
src/tools/cproj/: .gitignore  CMakeLists.txt  assign_nuc.c  ds.h  file.c  file.h  list_nuc_dist.c  nuc_fletch.c  uniq_line.c  utils.h
src/tools/cproj/test/: test.c
src/tools/cproj/test/data/: midpoint.csv  midpoint2.csv  nuc.csv  nuc2.csv  sample.csv
src/tools/pyproj/: main.py
src/tools/pyproj/src/: bam.py
src/tools/pyproj/test/data/: .gitignore  retrieve_files.sh
